# canal

./: README.md  build.sh
results/: README.md
results/bench_base/benchmarks/aes/: aes_canal.out  aes_gem5.out
results/bench_base/benchmarks/arrayAccess/: arrayAccess_canal.out  arrayAccess_gem5.out
results/bench_base/benchmarks/bubbleSort/: bubbleSort_canal.out  bubbleSort_gem5.out
results/bench_base/benchmarks/des/: des_canal.out  des_gem5.out
results/bench_base/benchmarks/insertionSort/: insertionSort_canal.out  insertionSort_gem5.out
results/bench_klee/benchmarks/copysome-01-interfere/: main.c
results/bench_klee/benchmarks/copysome-01-noninterfere/: main.c
results/bench_klee/benchmarks/sanfoundry-02-interfere/: main.c
results/bench_klee/benchmarks/standard-init-01-interfere/: main.c
results/bench_klee/benchmarks/standard-init-01-noninterfere/: main.c
results/bench_smack/benchmarks/copysome-01/: main.c
results/bench_smack/benchmarks/sanfoundry-02/: main.c
src/: CMakeLists.txt
src/apiInsertion/: CMakeLists.txt  main.cpp
src/build34/: CMakeCache.txt
src/build38/: Makefile
src/build38/apiInsertion/: cmake_install.cmake
tests/: README.md
tests/bench_base/: README.md  buildPass.sh  get_number_gem5.sh  get_number_ours.sh  run_all.sh  single_run.sh
tests/bench_base/benchmarks/aes/: base_gem5  main.c  (+4 more)
tests/bench_crabllvm/: buildPass.sh  run_all.sh  run_crabllvm.sh  single_run.sh
tests/bench_klee/: buildPass.sh  run_all.sh  run_klee.sh  save_res.sh  single_run.sh
tests/bench_smack/: buildPass.sh  run_all.sh  run_smack.sh  single_run.sh
(+1166 files in other folders)
